--- a/index.html
+++ b/index.html
@@ -1,36 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Crate Key Shop</title>
-    <style>
-        body { font-family: Arial, sans-serif; background: #111; color: white; text-align: center; padding: 2rem; }
-        .crate { border: 1px solid #555; border-radius: 10px; padding: 1rem; margin: 1rem auto; width: 300px; background: #222; }
-        button { padding: 10px 20px; margin-top: 10px; font-size: 1rem; cursor: pointer; background: #28a745; color: white; border: none; border-radius: 5px; }
-        button:hover { background: #218838; }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Crate Key Shop</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: #1e1e2f;
+      color: white;
+      margin: 0;
+      padding: 20px;
+    }
+    header {
+      text-align: center;
+      padding: 20px;
+    }
+    h1 {
+      margin: 0;
+      font-size: 2.5em;
+    }
+    .crate-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      margin-top: 30px;
+    }
+    .crate-card {
+      background: #2c2c3e;
+      border-radius: 12px;
+      padding: 20px;
+      box-shadow: 0 0 12px rgba(0,0,0,0.3);
+      text-align: center;
+    }
+    .crate-card h2 {
+      margin-bottom: 10px;
+      font-size: 1.5em;
+    }
+    .crate-card p {
+      font-size: 1.1em;
+    }
+    .crate-card form {
+      margin-top: 15px;
+    }
+    .paypal-button {
+      background-color: #ffc439;
+      border: none;
+      padding: 10px 15px;
+      font-size: 1em;
+      font-weight: bold;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
-    <h1>Buy Crate Keys</h1>
-    <div class="crate">
-        <h2>Seasonal Crate</h2>
-        <p>$2.00 per key</p>
-        <button onclick="alert('PayPal not yet connected')">Buy Now</button>
+  <header>
+    <h1>🛒 Crate Key Shop</h1>
+    <p>Select a crate below and purchase with PayPal!</p>
+  </header>
+
+  <div class="crate-container">
+    <!-- SeasonalCrate -->
+    <div class="crate-card">
+      <h2>SeasonalCrate Key</h2>
+      <p>$2.00 per key</p>
+      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+        <input type="hidden" name="cmd" value="_xclick">
+        <input type="hidden" name="business" value="YOUR_PAYPAL_EMAIL_HERE">
+        <input type="hidden" name="item_name" value="SeasonalCrate Key">
+        <input type="hidden" name="amount" value="2.00">
+        <input type="hidden" name="currency_code" value="USD">
+        <button type="submit" class="paypal-button">Buy Now</button>
+      </form>
     </div>
-    <div class="crate">
-        <h2>Spawner Crate</h2>
-        <p>$3.00 per key</p>
-        <button onclick="alert('PayPal not yet connected')">Buy Now</button>
+
+    <!-- SpawnerCrate -->
+    <div class="crate-card">
+      <h2>SpawnerCrate Key</h2>
+      <p>$3.00 per key</p>
+      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+        <input type="hidden" name="cmd" value="_xclick">
+        <input type="hidden" name="business" value="YOUR_PAYPAL_EMAIL_HERE">
+        <input type="hidden" name="item_name" value="SpawnerCrate Key">
+        <input type="hidden" name="amount" value="3.00">
+        <input type="hidden" name="currency_code" value="USD">
+        <button type="submit" class="paypal-button">Buy Now</button>
+      </form>
     </div>
-    <div class="crate">
-        <h2>Ultra Crate</h2>
-        <p>$4.00 per key</p>
-        <button onclick="alert('PayPal not yet connected')">Buy Now</button>
+
+    <!-- MythicCrate -->
+    <div class="crate-card">
+      <h2>MythicCrate Key</h2>
+      <p>$4.00 per key</p>
+      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+        <input type="hidden" name="cmd" value="_xclick">
+        <input type="hidden" name="business" value="YOUR_PAYPAL_EMAIL_HERE">
+        <input type="hidden" name="item_name" value="MythicCrate Key">
+        <input type="hidden" name="amount" value="4.00">
+        <input type="hidden" name="currency_code" value="USD">
+        <button type="submit" class="paypal-button">Buy Now</button>
+      </form>
     </div>
-    <div class="crate">
-        <h2>Mythic Crate</h2>
-        <p>$5.00 per key</p>
-        <button onclick="alert('PayPal not yet connected')">Buy Now</button>
+
+    <!-- UltraCrate -->
+    <div class="crate-card">
+      <h2>UltraCrate Key</h2>
+      <p>$5.00 per key</p>
+      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+        <input type="hidden" name="cmd" value="_xclick">
+        <input type="hidden" name="business" value="YOUR_PAYPAL_EMAIL_HERE">
+        <input type="hidden" name="item_name" value="UltraCrate Key">
+        <input type="hidden" name="amount" value="5.00">
+        <input type="hidden" name="currency_code" value="USD">
+        <button type="submit" class="paypal-button">Buy Now</button>
+      </form>
     </div>
+  </div>
 </body>
 </html>
