--- a/index.html
+++ b/index.html
@@ -1,121 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Crate Key Shop</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #1e1e2f;
-      color: white;
-      margin: 0;
-      padding: 20px;
-    }
-    header {
-      text-align: center;
-      padding: 20px;
-    }
-    h1 {
-      margin: 0;
-      font-size: 2.5em;
-    }
-    .crate-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      margin-top: 30px;
-    }
-    .crate-card {
-      background: #2c2c3e;
-      border-radius: 12px;
-      padding: 20px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.3);
-      text-align: center;
-    }
-    .crate-card h2 {
-      margin-bottom: 10px;
-      font-size: 1.5em;
-    }
-    .crate-card p {
-      font-size: 1.1em;
-    }
-    .crate-card form {
-      margin-top: 15px;
-    }
-    .paypal-button {
-      background-color: #ffc439;
-      border: none;
-      padding: 10px 15px;
-      font-size: 1em;
-      font-weight: bold;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mad6SMP Kits Shop</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Arial', sans-serif;
+            background-color: #0e0e0e;
+            color: #fff;
+            text-align: center;
+        }
+        header {
+            background: #1f1f1f;
+            padding: 20px 0;
+            font-size: 2rem;
+            letter-spacing: 2px;
+        }
+        nav a {
+            color: #fff;
+            margin: 0 15px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .hero {
+            padding: 80px 20px;
+            background: linear-gradient(135deg, #1a1a1a, #2c2c2c);
+        }
+        .hero h1 {
+            font-size: 3rem;
+            margin-bottom: 20px;
+        }
+        .hero a {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 25px;
+            background: #ff5722;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+        }
+        .kits {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            padding: 40px 20px;
+        }
+        .kit {
+            background: #1f1f1f;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(255, 87, 34, 0.5);
+        }
+        .kit h2 {
+            margin-top: 0;
+        }
+        .kit p {
+            font-size: 1.2rem;
+            margin: 10px 0;
+        }
+        .kit a {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 10px 20px;
+            background: #ff5722;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+        }
+        footer {
+            background: #1f1f1f;
+            padding: 15px;
+            font-size: 0.9rem;
+            color: #888;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <h1>🛒 Crate Key Shop</h1>
-    <p>Select a crate below and purchase with PayPal!</p>
-  </header>
 
-  <div class="crate-container">
-    <!-- SeasonalCrate -->
-    <div class="crate-card">
-      <h2>SeasonalCrate Key</h2>
-      <p>$2.00 per key</p>
-      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-        <input type="hidden" name="cmd" value="_xclick">
-        <input type="hidden" name="business" value="YOUR_PAYPAL_EMAIL_HERE">
-        <input type="hidden" name="item_name" value="SeasonalCrate Key">
-        <input type="hidden" name="amount" value="2.00">
-        <input type="hidden" name="currency_code" value="USD">
-        <button type="submit" class="paypal-button">Buy Now</button>
-      </form>
+<header>
+    Mad6SMP
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#kits">Kits</a>
+    </nav>
+</header>
+
+<section class="hero" id="home">
+    <h1>Welcome to Mad6SMP!</h1>
+    <p>Get your exclusive kits now!</p>
+    <a href="#kits">Shop Kits</a>
+</section>
+
+<section class="kits" id="kits">
+    <div class="kit">
+        <h2>VIP Kit</h2>
+        <p>$10 - Starter gear and bonus coins</p>
+        <a href="https://www.paypal.com/paypalme/YourPayPalLink/10" target="_blank">Buy Now</a>
     </div>
 
-    <!-- SpawnerCrate -->
-    <div class="crate-card">
-      <h2>SpawnerCrate Key</h2>
-      <p>$3.00 per key</p>
-      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-        <input type="hidden" name="cmd" value="_xclick">
-        <input type="hidden" name="business" value="YOUR_PAYPAL_EMAIL_HERE">
-        <input type="hidden" name="item_name" value="SpawnerCrate Key">
-        <input type="hidden" name="amount" value="3.00">
-        <input type="hidden" name="currency_code" value="USD">
-        <button type="submit" class="paypal-button">Buy Now</button>
-      </form>
+    <div class="kit">
+        <h2>Mythic Kit</h2>
+        <p>$20 - Epic armor and enchanted tools</p>
+        <a href="https://www.paypal.com/paypalme/YourPayPalLink/20" target="_blank">Buy Now</a>
     </div>
 
-    <!-- MythicCrate -->
-    <div class="crate-card">
-      <h2>MythicCrate Key</h2>
-      <p>$4.00 per key</p>
-      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-        <input type="hidden" name="cmd" value="_xclick">
-        <input type="hidden" name="business" value="YOUR_PAYPAL_EMAIL_HERE">
-        <input type="hidden" name="item_name" value="MythicCrate Key">
-        <input type="hidden" name="amount" value="4.00">
-        <input type="hidden" name="currency_code" value="USD">
-        <button type="submit" class="paypal-button">Buy Now</button>
-      </form>
+    <div class="kit">
+        <h2>Ultra Kit</h2>
+        <p>$30 - Legendary gear and rare items</p>
+        <a href="https://www.paypal.com/paypalme/YourPayPalLink/30" target="_blank">Buy Now</a>
     </div>
+</section>
 
-    <!-- UltraCrate -->
-    <div class="crate-card">
-      <h2>UltraCrate Key</h2>
-      <p>$5.00 per key</p>
-      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-        <input type="hidden" name="cmd" value="_xclick">
-        <input type="hidden" name="business" value="YOUR_PAYPAL_EMAIL_HERE">
-        <input type="hidden" name="item_name" value="UltraCrate Key">
-        <input type="hidden" name="amount" value="5.00">
-        <input type="hidden" name="currency_code" value="USD">
-        <button type="submit" class="paypal-button">Buy Now</button>
-      </form>
-    </div>
-  </div>
+<footer>
+    &copy; 2025 Mad6SMP | All Rights Reserved
+</footer>
+
 </body>
 </html>
